2006-02-05  Derek Atkins  <derek@ihtfp.com>

	* src/backend/file/test/Makefile.am: link against libcore-utils.

	* src/app-utils/test/test-scm-query-string.c:
	  use g_strdup -- cannot feed SCM_STRING_CHARS() back into guile.
	  (fixes a weird test-case failure in some cases).

	* src/backend/file/Makefile.am: link against libcore-utils.

2006-02-05  Neil Williams <linux@codehelp.co.uk>

	* lib/libqof/qof/qoflog.c :
	* lib/libqof/qof/qoflog.h :
	* lib/libqof/qof/deprecated.c :
	* lib/libqof/qof/deprecated.h : Deprecating qof_log_set_level_global
	in favour of qof_log_set_level_registered. Documenting circumstances
	under which _global could be modified and added as a new function.
	Improve qof_log_check to handle out-of-bounds log_levels.

2006-02-05  Neil Williams <linux@codehelp.co.uk>

	* lib/libqof/qof/qofbackend-p.h :
	* lib/libqof/qof/qofbackend.h : Improving
	documentation for QofBackendProvider
	* lib/libqof/qof/qofchoice.c :
	* lib/libqof/qof/qofchoice.h : Support logging.
	* lib/libqof/qof/qoflog.c : Add qofchoice to default
	log modules.
	* lib/libqof/qof/gnc-engine-util.h : Line-wrapping tweak.	

2006-02-04  David Hampton  <david@dhcp-15.rainbolthampton.net>

	* src/register/ledger-core/split-register.c:
	* src/gnome-utils/gnc-tree-view-account.c: Get gnucash to compile
	with gcc4.1.

2006-02-04  Derek Atkins  <derek@ihtfp.com>

	* lib/libqof/qof/gnc-numeric.c:
	  - Fixes for handling reciprocal values.
	  - Mark a lot of places where potential overflow bugs
	    are not handled.

2006-02-04  Joshua Sled  <jsled@asynchronous.org>

	* src/doc/xml/gnucash-v2.rnc: Add reverse-engineered schema for
	"v2" (1.8/2.0) XML files.

	* src/backend/file/io-gncxml-v2.c (write_v2_header): Emit
	'fs' (FreqSpec), 'bgt', 'recurrence' (Budgeting), and 'lot'
	namespace decls.

2006-02-04  David Hampton  <hampton@employees.org>

	* src/import-export/schemas/Makefile.am:
	* src/import-export/hbci/schemas/Makefile.am:
	* src/business/business-gnome/schemas/Makefile.am: