@@ -872,6 +872,7 @@ static void
 make_random_group (QofBook *book, AccountGroup *group)
 {
   int depth;
+  GList *account_list;
 
   g_return_if_fail (book);
   g_return_if_fail (group);
@@ -880,6 +881,12 @@ make_random_group (QofBook *book, AccountGroup *group)
   depth = get_random_int_in_range (1, max_group_depth);
 
   make_random_group_depth (book, group, depth);
+
+  /* Make sure we have at least two accounts! */
+  account_list = xaccGroupGetSubAccounts (xaccGetAccountGroup (book));
+  if (1 >= g_list_length (account_list))
+    make_random_group_depth (book, group, 1);
+  g_list_free(account_list);
 }
 
 AccountGroup *
@@ -1398,7 +1405,12 @@ get_random_transaction_with_currency(QofBook *book,
     }
 
     /* Gotta have at least two different accounts */
-    if (1 >= g_list_length (account_list)) return NULL;
+    if (1 >= g_list_length (account_list)) {
+      failure_args("engine-stuff", __FILE__, __LINE__,
+              "get_random_transaction_with_currency: account_list too short");
+      g_list_free(account_list);
+      return NULL;
+    }
 
     trans = xaccMallocTransaction(book);
 
@@ -1420,6 +1432,7 @@ get_random_transaction_with_currency(QofBook *book,
     xaccTransSetSlots_nc(trans, f);
 
     add_random_splits(book, trans, account_list);
+    g_list_free(account_list);
 
     if (get_random_int_in_range (1, 10) == 1)
     {
